# rust-bazel

./: .gitignore  README.md  WORKSPACE.bazel  bazel.lock.json  cargo.lock.toml  gen_rust_project.sh  init.sh
crates/example/: BUILD.bazel
crates/example/src/: main.rs
tmp/: CrateGraph.txt  r-a-diag.txt  rust-project.json
